fixed overlapping

--- a/gallery.css
+++ b/gallery.css
@@ -249,7 +249,7 @@ h2 {
 	transform: translateZ(-15rem) rotateX(90deg);
 }
 .row{
-  padding: 1%;
+  padding: 2%;
 }
 .col-sm-3 img{
   width: 230px;
